# embed-doc-image

./: Cargo.toml  README.md
embed-doc-image-showcase/: Cargo.toml  README.md
embed-doc-image-showcase/src/: lib.rs
src/: lib.rs
