[package]
name = "embed-doc-image"
version = "0.1.4"
authors = ["Andreas Longva"]
edition = "2018"
description = "Embed images in Rust documentation"
license = "MIT"
documentation = "https://docs.rs/embed-doc-image"
homepage = "https://github.com/Andlon/embed-doc-image"
repository = "https://github.com/Andlon/embed-doc-image"
categories = ["development-tools", "rust-patterns"]
keywords = ["documentation", "rustdoc"]

[lib]
proc-macro = true

[dependencies]
syn = { version="1.0.109", default-features=false, features = ["full", "parsing", "proc-macro", "printing"] }
quote = "1.0.21"
proc-macro2 = "1.0.74"
base64 = "0.13"

[workspace]
members = [ "embed-doc-image-showcase" ]
