[package]
name = "doc-image-embed"
version = "0.2.0"
authors = ["Andreas Longva", "TimTheBig"]
edition = "2021"
description = "Embed images in Rust documentation"
license = "MIT"
documentation = "https://docs.rs/doc-image-embed"
repository = "https://github.com/TimTheBig/embed-doc-image"
categories = ["development-tools", "rust-patterns"]
keywords = ["documentation", "rustdoc"]
rust-version = "1.56.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", default-features = false, features = ["full", "parsing", "proc-macro", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"
base64 = "0.22"

[workspace]
members = ["embed-doc-image-showcase"]
